syntax="proto3";

package calculator;

option go_package="/calcpb";

message CalculatorRequest {
     int64 num1 = 1;
     int64 num2 = 2;
}

message CalculatorResponse {
     int64 result = 1;
}

message PrimeNumDecompRequest {
     int64 num = 1;
}

message PrimeNumDecompResponse {
     int64 num = 1;
}

message AverageRequest {
     int64 num = 1;
}

message AverageResponse {
     int64 result = 1;
}

message MaximumRequest {
     int64 num = 1;
}

message MaximumResponse {
     int64 max = 2;
}


service CalculatorService {
     // unary API
     rpc Sum(CalculatorRequest) returns (CalculatorResponse) {};

     // server streaming
     rpc PrimeNumDecomposition(PrimeNumDecompRequest) returns (stream PrimeNumDecompResponse) {};

     // client streaming
     rpc Average(stream AverageRequest) returns (AverageResponse) {};

     //bi-directional stream
     rpc Maximum(stream MaximumRequest) returns (stream MaximumResponse) {};
}

